--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
     <string name="app_name">GeoQuiz</string>
-    <string name="question_australia">Canberra is the capital of Australia.</string>
-    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
-    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
-    <string name="question_africa">The source of the Nile RIver is in Egypt.</string>
-    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
-    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
+    <string name="question_mountain">Mount Everest is the tallest mountain in the world.</string>
+    <string name="question_country">The largest country in the world is the USA.</string>
+    <string name="question_canada">Canada\'s capital is Toronto.</string>
+    <string name="question_antarctica">Antarctica is the coldest place on Earth.</string>
+    <string name="question_ocean">The Atlantic Ocean is the largest ocean in the world.</string>
+    <string name="question_egypt">The Great Pyramids of Giza are located in Egypt.</string>
     <string name="true_button">True</string>
     <string name="false_button">False</string>
     <string name="previous_button">Previous</string>
